Bug 419118 - System settings crash while opening translucency config
Summary: System settings crash while opening translucency config
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kwin_effects (other bugs)
Version First Reported In: 5.18.3
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: drkonqi
: 414118 419607 419700 419772 420176 420407 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-03-22 17:31 UTC by siralexgil
Modified: 2020-04-23 23:51 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.19.0
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (13.00 KB, text/plain)
2020-03-28 21:32 UTC, Sheen
Details
New crash information added by DrKonqi (14.65 KB, text/plain)
2020-04-23 23:51 UTC, pieroviscone
Details

Note You need to log in before you can comment on or make changes to this bug.
Description siralexgil 2020-03-22 17:31:17 UTC
Application: systemsettings5 (5.18.3)

Qt Version: 5.14.1
Frameworks Version: 5.68.0
Operating System: Linux 5.5.10-arch1-1 x86_64
Windowing system: X11
Distribution: "Arch Linux"

-- Information about the crash:
- What I was doing when the application crashed:
Opening system settings > workspace behavior > desktop effects > translucency  > configure
- Unusual behavior I noticed:
It works OK if system language is set to English but chashes if it's Spanish.

The crash can be reproduced every time.

-- Backtrace:
Application: Preferencias del sistema (systemsettings5), signal: Aborted
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fb2688b7cc0 (LWP 8752))]

Thread 10 (Thread 0x7fb240fb2700 (LWP 8911)):
#0  0x00007fb26cfddabf in poll () at /usr/lib/libc.so.6
#1  0x00007fb26afa27a0 in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007fb26afa2871 in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#3  0x00007fb26d5960ec in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#4  0x00007fb26d53c57c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007fb26d360e62 in QThread::exec() () at /usr/lib/libQt5Core.so.5
#6  0x00007fb26c600f89 in  () at /usr/lib/libQt5Qml.so.5
#7  0x00007fb26d361fd6 in  () at /usr/lib/libQt5Core.so.5
#8  0x00007fb26bbba46f in start_thread () at /usr/lib/libpthread.so.0
#9  0x00007fb26cfe83d3 in clone () at /usr/lib/libc.so.6

Thread 9 (Thread 0x7fb2435ef700 (LWP 8792)):
#0  0x00007fb26af51479 in g_mutex_lock () at /usr/lib/libglib-2.0.so.0
#1  0x00007fb26afa2785 in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007fb26afa2871 in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#3  0x00007fb26d5960ec in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#4  0x00007fb26d53c57c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007fb26d360e62 in QThread::exec() () at /usr/lib/libQt5Core.so.5
#6  0x00007fb26c600f89 in  () at /usr/lib/libQt5Qml.so.5
#7  0x00007fb26d361fd6 in  () at /usr/lib/libQt5Core.so.5
#8  0x00007fb26bbba46f in start_thread () at /usr/lib/libpthread.so.0
#9  0x00007fb26cfe83d3 in clone () at /usr/lib/libc.so.6

Thread 8 (Thread 0x7fb25d71b700 (LWP 8785)):
#0  0x00007fb26af514e4 in g_mutex_unlock () at /usr/lib/libglib-2.0.so.0
#1  0x00007fb26af975af in g_main_context_query () at /usr/lib/libglib-2.0.so.0
#2  0x00007fb26afa271d in  () at /usr/lib/libglib-2.0.so.0
#3  0x00007fb26afa2871 in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#4  0x00007fb26d5960ec in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007fb26d53c57c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#6  0x00007fb26d360e62 in QThread::exec() () at /usr/lib/libQt5Core.so.5
#7  0x00007fb26c600f89 in  () at /usr/lib/libQt5Qml.so.5
#8  0x00007fb26d361fd6 in  () at /usr/lib/libQt5Core.so.5
#9  0x00007fb26bbba46f in start_thread () at /usr/lib/libpthread.so.0
#10 0x00007fb26cfe83d3 in clone () at /usr/lib/libc.so.6

Thread 7 (Thread 0x7fb25e6bb700 (LWP 8784)):
#0  0x00007fb26bbc0cf5 in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007fb264665e1c in  () at /usr/lib/dri/i965_dri.so
#2  0x00007fb264665a18 in  () at /usr/lib/dri/i965_dri.so
#3  0x00007fb26bbba46f in start_thread () at /usr/lib/libpthread.so.0
#4  0x00007fb26cfe83d3 in clone () at /usr/lib/libc.so.6

Thread 6 (Thread 0x7fb25eebc700 (LWP 8783)):
#0  0x00007fb26bbc0cf5 in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007fb264665e1c in  () at /usr/lib/dri/i965_dri.so
#2  0x00007fb264665a18 in  () at /usr/lib/dri/i965_dri.so
#3  0x00007fb26bbba46f in start_thread () at /usr/lib/libpthread.so.0
#4  0x00007fb26cfe83d3 in clone () at /usr/lib/libc.so.6

Thread 5 (Thread 0x7fb25f6bd700 (LWP 8782)):
#0  0x00007fb26bbc0cf5 in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007fb264665e1c in  () at /usr/lib/dri/i965_dri.so
#2  0x00007fb264665a18 in  () at /usr/lib/dri/i965_dri.so
#3  0x00007fb26bbba46f in start_thread () at /usr/lib/libpthread.so.0
#4  0x00007fb26cfe83d3 in clone () at /usr/lib/libc.so.6

Thread 4 (Thread 0x7fb25febe700 (LWP 8781)):
#0  0x00007fb26bbc0cf5 in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007fb264665e1c in  () at /usr/lib/dri/i965_dri.so
#2  0x00007fb264665a18 in  () at /usr/lib/dri/i965_dri.so
#3  0x00007fb26bbba46f in start_thread () at /usr/lib/libpthread.so.0
#4  0x00007fb26cfe83d3 in clone () at /usr/lib/libc.so.6

Thread 3 (Thread 0x7fb2666fa700 (LWP 8770)):
#0  0x00007fb26cfddabf in poll () at /usr/lib/libc.so.6
#1  0x00007fb26afa27a0 in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007fb26afa2871 in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#3  0x00007fb26d5960ec in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#4  0x00007fb26d53c57c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007fb26d360e62 in QThread::exec() () at /usr/lib/libQt5Core.so.5
#6  0x00007fb26d7e6b28 in  () at /usr/lib/libQt5DBus.so.5
#7  0x00007fb26d361fd6 in  () at /usr/lib/libQt5Core.so.5
#8  0x00007fb26bbba46f in start_thread () at /usr/lib/libpthread.so.0
#9  0x00007fb26cfe83d3 in clone () at /usr/lib/libc.so.6

Thread 2 (Thread 0x7fb267ace700 (LWP 8757)):
#0  0x00007fb26cfddabf in poll () at /usr/lib/libc.so.6
#1  0x00007fb26bb7963b in  () at /usr/lib/libxcb.so.1
#2  0x00007fb26bb7b37b in xcb_wait_for_event () at /usr/lib/libxcb.so.1
#3  0x00007fb268467ba1 in  () at /usr/lib/libQt5XcbQpa.so.5
#4  0x00007fb26d361fd6 in  () at /usr/lib/libQt5Core.so.5
#5  0x00007fb26bbba46f in start_thread () at /usr/lib/libpthread.so.0
#6  0x00007fb26cfe83d3 in clone () at /usr/lib/libc.so.6

Thread 1 (Thread 0x7fb2688b7cc0 (LWP 8752)):
[KCrash Handler]
#6  0x00007fb26cf24ce5 in raise () at /usr/lib/libc.so.6
#7  0x00007fb26cf0e857 in abort () at /usr/lib/libc.so.6
#8  0x00007fb26d32696c in  () at /usr/lib/libQt5Core.so.5
#9  0x00007fb26c5421b7 in QQmlData::destroyed(QObject*) () at /usr/lib/libQt5Qml.so.5
#10 0x00007fb26d571423 in QObject::~QObject() () at /usr/lib/libQt5Core.so.5
#11 0x00007fb26c9b22d4 in QQuickItem::~QQuickItem() () at /usr/lib/libQt5Quick.so.5
#12 0x00007fb25c1f2ee0 in  () at /usr/lib/qt/qml/QtQuick/Templates.2/libqtquicktemplates2plugin.so
#13 0x00007fb26d56b0a0 in QObject::event(QEvent*) () at /usr/lib/libQt5Core.so.5
#14 0x00007fb26c9af746 in QQuickItem::event(QEvent*) () at /usr/lib/libQt5Quick.so.5
#15 0x00007fb26e072362 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
#16 0x00007fb26e07b819 in QApplication::notify(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
#17 0x00007fb26d53da12 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /usr/lib/libQt5Core.so.5
#18 0x00007fb26d540276 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () at /usr/lib/libQt5Core.so.5
#19 0x00007fb26d596a84 in  () at /usr/lib/libQt5Core.so.5
#20 0x00007fb26afa09be in g_main_context_dispatch () at /usr/lib/libglib-2.0.so.0
#21 0x00007fb26afa2831 in  () at /usr/lib/libglib-2.0.so.0
#22 0x00007fb26afa2871 in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#23 0x00007fb26d5960d0 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#24 0x00007fb26d53c57c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#25 0x00007fb26e28059e in QDialog::exec() () at /usr/lib/libQt5Widgets.so.5
#26 0x00007fb2406ad32a in KWin::EffectsModel::requestConfigure(QModelIndex const&, QWindow*) () at /usr/lib/libkcmkwincommon.so.5
#27 0x00007fb24079f097 in  () at /usr/lib/qt/plugins/kcms/kcm_kwin_effects.so
#28 0x00007fb24079e5d8 in  () at /usr/lib/qt/plugins/kcms/kcm_kwin_effects.so
#29 0x00007fb24079ea93 in  () at /usr/lib/qt/plugins/kcms/kcm_kwin_effects.so
#30 0x00007fb26c5986fe in  () at /usr/lib/libQt5Qml.so.5
#31 0x00007fb26c471cf6 in  () at /usr/lib/libQt5Qml.so.5
#32 0x00007fb26c473fcc in  () at /usr/lib/libQt5Qml.so.5
#33 0x00007fb26c474dde in QV4::QObjectMethod::callInternal(QV4::Value const*, QV4::Value const*, int) const () at /usr/lib/libQt5Qml.so.5
#34 0x00007fb26c493566 in  () at /usr/lib/libQt5Qml.so.5
#35 0x00007fb26c4954df in  () at /usr/lib/libQt5Qml.so.5
#36 0x00007fb26c42547e in QV4::Function::call(QV4::Value const*, QV4::Value const*, int, QV4::ExecutionContext const*) () at /usr/lib/libQt5Qml.so.5
#37 0x00007fb26c5b6d88 in QQmlJavaScriptExpression::evaluate(QV4::CallData*, bool*) () at /usr/lib/libQt5Qml.so.5
#38 0x00007fb26c55d1ff in QQmlBoundSignalExpression::evaluate(void**) () at /usr/lib/libQt5Qml.so.5
#39 0x00007fb26c55e839 in  () at /usr/lib/libQt5Qml.so.5
#40 0x00007fb26c59816d in QQmlNotifier::emitNotify(QQmlNotifierEndpoint*, void**) () at /usr/lib/libQt5Qml.so.5
#41 0x00007fb26c53fbae in QQmlData::signalEmitted(QAbstractDeclarativeData*, QObject*, int, void**) () at /usr/lib/libQt5Qml.so.5
#42 0x00007fb26d573085 in  () at /usr/lib/libQt5Core.so.5
#43 0x00007fb266ed69f3 in QQuickAction::triggered(QObject*) () at /usr/lib/libQt5QuickTemplates2.so.5
#44 0x00007fb266ed76e4 in  () at /usr/lib/libQt5QuickTemplates2.so.5
#45 0x00007fb266ed79e0 in  () at /usr/lib/libQt5QuickTemplates2.so.5
#46 0x00007fb266ed80e3 in QQuickAction::qt_metacall(QMetaObject::Call, int, void**) () at /usr/lib/libQt5QuickTemplates2.so.5
#47 0x00007fb26c53ad52 in QQmlVMEMetaObject::metaCall(QObject*, QMetaObject::Call, int, void**) () at /usr/lib/libQt5Qml.so.5
#48 0x00007fb26c53ad14 in QQmlVMEMetaObject::metaCall(QObject*, QMetaObject::Call, int, void**) () at /usr/lib/libQt5Qml.so.5
#49 0x00007fb26c5986fe in  () at /usr/lib/libQt5Qml.so.5
#50 0x00007fb26c4720e5 in  () at /usr/lib/libQt5Qml.so.5
#51 0x00007fb26c473fa1 in  () at /usr/lib/libQt5Qml.so.5
#52 0x00007fb26c474fd9 in QV4::QObjectMethod::callInternal(QV4::Value const*, QV4::Value const*, int) const () at /usr/lib/libQt5Qml.so.5
#53 0x00007fb26c493566 in  () at /usr/lib/libQt5Qml.so.5
#54 0x00007fb26c4954df in  () at /usr/lib/libQt5Qml.so.5
#55 0x00007fb26c42547e in QV4::Function::call(QV4::Value const*, QV4::Value const*, int, QV4::ExecutionContext const*) () at /usr/lib/libQt5Qml.so.5
#56 0x00007fb26c5b6d88 in QQmlJavaScriptExpression::evaluate(QV4::CallData*, bool*) () at /usr/lib/libQt5Qml.so.5
#57 0x00007fb26c55d1ff in QQmlBoundSignalExpression::evaluate(void**) () at /usr/lib/libQt5Qml.so.5
#58 0x00007fb26c55e839 in  () at /usr/lib/libQt5Qml.so.5
#59 0x00007fb26c59816d in QQmlNotifier::emitNotify(QQmlNotifierEndpoint*, void**) () at /usr/lib/libQt5Qml.so.5
#60 0x00007fb26c53fbae in QQmlData::signalEmitted(QAbstractDeclarativeData*, QObject*, int, void**) () at /usr/lib/libQt5Qml.so.5
#61 0x00007fb26d573085 in  () at /usr/lib/libQt5Core.so.5
#62 0x00007fb266ed5799 in QQuickAbstractButtonPrivate::handleRelease(QPointF const&) () at /usr/lib/libQt5QuickTemplates2.so.5
#63 0x00007fb266ef39c5 in QQuickControl::mouseReleaseEvent(QMouseEvent*) () at /usr/lib/libQt5QuickTemplates2.so.5
#64 0x00007fb26c9af578 in QQuickItem::event(QEvent*) () at /usr/lib/libQt5Quick.so.5
#65 0x00007fb26e072362 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
#66 0x00007fb26e07b819 in QApplication::notify(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
#67 0x00007fb26d53da12 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /usr/lib/libQt5Core.so.5
#68 0x00007fb26c9cb159 in QQuickWindowPrivate::deliverMouseEvent(QQuickPointerMouseEvent*) () at /usr/lib/libQt5Quick.so.5
#69 0x00007fb26c9cc8e8 in QQuickWindowPrivate::deliverPointerEvent(QQuickPointerEvent*) () at /usr/lib/libQt5Quick.so.5
#70 0x00007fb26c9cd6e8 in QQuickWindowPrivate::handleMouseEvent(QMouseEvent*) () at /usr/lib/libQt5Quick.so.5
#71 0x00007fb26d9aa97d in QWindow::event(QEvent*) () at /usr/lib/libQt5Gui.so.5
#72 0x00007fb26c9cf183 in QQuickWindow::event(QEvent*) () at /usr/lib/libQt5Quick.so.5
#73 0x00007fb26e072362 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
#74 0x00007fb26e07b819 in QApplication::notify(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
#75 0x00007fb26d53da12 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /usr/lib/libQt5Core.so.5
#76 0x00007fb26ccea0da in QQuickWidget::mouseReleaseEvent(QMouseEvent*) () at /usr/lib/libQt5QuickWidgets.so.5
#77 0x00007fb26e0b648e in QWidget::event(QEvent*) () at /usr/lib/libQt5Widgets.so.5
#78 0x00007fb26ccea294 in QQuickWidget::event(QEvent*) () at /usr/lib/libQt5QuickWidgets.so.5
#79 0x00007fb26e072362 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
#80 0x00007fb26e07ba68 in QApplication::notify(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
#81 0x00007fb26d53da12 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /usr/lib/libQt5Core.so.5
#82 0x00007fb26e07aafb in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) () at /usr/lib/libQt5Widgets.so.5
#83 0x00007fb26e0d1c41 in  () at /usr/lib/libQt5Widgets.so.5
#84 0x00007fb26e0d4bc4 in  () at /usr/lib/libQt5Widgets.so.5
#85 0x00007fb26e072362 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
#86 0x00007fb26e07b819 in QApplication::notify(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
#87 0x00007fb26d53da12 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /usr/lib/libQt5Core.so.5
#88 0x00007fb26d99f574 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () at /usr/lib/libQt5Gui.so.5
#89 0x00007fb26d9a0cb6 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () at /usr/lib/libQt5Gui.so.5
#90 0x00007fb26d979bcc in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Gui.so.5
#91 0x00007fb268468bcc in  () at /usr/lib/libQt5XcbQpa.so.5
#92 0x00007fb26afa09be in g_main_context_dispatch () at /usr/lib/libglib-2.0.so.0
#93 0x00007fb26afa2831 in  () at /usr/lib/libglib-2.0.so.0
#94 0x00007fb26afa2871 in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#95 0x00007fb26d5960d0 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#96 0x00007fb26d53c57c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#97 0x00007fb26d544586 in QCoreApplication::exec() () at /usr/lib/libQt5Core.so.5
#98 0x00005560448ae46c in  ()
#99 0x00007fb26cf10023 in __libc_start_main () at /usr/lib/libc.so.6
#100 0x00005560448ae4fe in _start ()
[Inferior 1 (process 8752) detached]

Possible duplicates by query: bug 418913, bug 417802, bug 416321, bug 415674, bug 415396.

Reported using DrKonqi
Comment 1 David Edmundson 2020-03-22 17:39:54 UTC
>#25 0x00007fb26e28059e in QDialog::exec() () at /usr/lib/libQt5Widgets.so.5
#26 0x00007fb2406ad32a in KWin::EffectsModel::requestConfigure(QModelIndex const&, QWindow*) () at /usr/lib/libkcmkwincommon.so.5


Aha
Comment 2 Sheen 2020-03-28 21:32:58 UTC
Created attachment 127068 [details]
New crash information added by DrKonqi

systemsettings5 (5.18.3) using Qt 5.14.1

- What I was doing when the application crashed:

Opening translucency panel in KDE settings.
My KDE Plasma is in French Language (seems related because other report the same bug with KDE in Spanish Language)

-- Backtrace (Reduced):
#8  0x00007f99233e796c in  () at /usr/lib/libQt5Core.so.5
#9  0x00007f99226031b7 in QQmlData::destroyed(QObject*) () at /usr/lib/libQt5Qml.so.5
#10 0x00007f9923632423 in QObject::~QObject() () at /usr/lib/libQt5Core.so.5
#11 0x00007f9922a732d4 in QQuickItem::~QQuickItem() () at /usr/lib/libQt5Quick.so.5
#12 0x00007f990f7c5ee0 in  () at /usr/lib/qt/qml/QtQuick/Templates.2/libqtquicktemplates2plugin.so
Comment 3 David Edmundson 2020-03-30 16:27:27 UTC
Git commit 0a65681596c3289df607619adb6971e8d48259d0 by David Edmundson.
Committed on 30/03/2020 at 16:27.
Pushed by davidedmundson into branch 'master'.

[kcmkwin] Make dialog non blocking

Summary:
It's invoked from QML.

Nested event loops invoked directly from QML is asking for crashes.

Test Plan:
Opened KCM
Opened dialog for some settings
Window was still modal as before
Settings were saved
(though they didn't seem to be applied..maybe another bug?)

Reviewers: #kwin, apol

Reviewed By: apol

Subscribers: zzag, kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D28293

M  +6    -4    kcmkwin/common/effectsmodel.cpp

https://commits.kde.org/kwin/0a65681596c3289df607619adb6971e8d48259d0
Comment 4 David Edmundson 2020-04-03 21:32:25 UTC
*** Bug 419607 has been marked as a duplicate of this bug. ***
Comment 5 David Edmundson 2020-04-03 21:33:06 UTC
If it gets more dupes, I should probably backport this.
Comment 6 David Edmundson 2020-04-07 08:20:15 UTC
*** Bug 419772 has been marked as a duplicate of this bug. ***
Comment 7 David Edmundson 2020-04-07 08:20:34 UTC
*** Bug 419700 has been marked as a duplicate of this bug. ***
Comment 8 David Edmundson 2020-04-07 08:21:48 UTC
*** Bug 414118 has been marked as a duplicate of this bug. ***
Comment 9 David Edmundson 2020-04-07 08:27:51 UTC
Git commit bee3afdd5194e0cf1fb72619b3d130514102e3cf by David Edmundson.
Committed on 07/04/2020 at 08:27.
Pushed by davidedmundson into branch 'Plasma/5.18'.

[kcmkwin] Make dialog non blocking

Summary:
It's invoked from QML.

Nested event loops invoked directly from QML is asking for crashes.

Test Plan:
Opened KCM
Opened dialog for some settings
Window was still modal as before
Settings were saved
(though they didn't seem to be applied..maybe another bug?)

Reviewers: #kwin, apol

Reviewed By: apol

Subscribers: zzag, kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D28293

M  +6    -4    kcmkwin/common/effectsmodel.cpp

https://commits.kde.org/kwin/bee3afdd5194e0cf1fb72619b3d130514102e3cf
Comment 10 David Edmundson 2020-04-17 10:21:39 UTC
*** Bug 420176 has been marked as a duplicate of this bug. ***
Comment 11 David Edmundson 2020-04-22 09:17:11 UTC
*** Bug 420407 has been marked as a duplicate of this bug. ***
Comment 12 pieroviscone 2020-04-23 23:51:26 UTC
Created attachment 127812 [details]
New crash information added by DrKonqi

systemsettings5 (5.18.3) using Qt 5.13.2

- Unusual behavior I noticed: System settings crash when i click on translucent setting

-- Backtrace (Reduced):
#9  0x00007f1552d3430b in QQmlData::destroyed(QObject*) () at /lib64/libQt5Qml.so.5
#10 0x00007f1553c717be in QObject::~QObject() () at /lib64/libQt5Core.so.5
#11 0x00007f152d1727a2 in QQmlPrivate::QQmlElement<QQuickToolButton>::~QQmlElement() () at /usr/lib64/qt5/qml/QtQuick/Templates.2/libqtquicktemplates2plugin.so
#12 0x00007f1553c6b524 in QObject::event(QEvent*) () at /lib64/libQt5Core.so.5
#13 0x00007f15545d5e76 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /lib64/libQt5Widgets.so.5